# rgbd360

./: CMakeLists.txt  Doxyfile  FIM_eigen_vs_numCorresp.m  README.md  README.txt  config.h.in
Calibration/: CMakeLists.txt  CMakeLists.txt~  Calibrator.cpp  Calibrator_prev.cpp  EvalCalibration.cpp  EvalPairCalibration.cpp  GetControlPlanes.cpp  LaserCalibrator.cpp  LaserKinect.m  LaserKinect.m~  OnlineCalibration.cpp  OnlinePairCalibrator.cpp  PairCalibrator.cpp  RawlogCalibrator.cpp  Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt  Rt_Pair1.txt  Rt_Pair3.txt  ToFCalibrator.cpp  VisualizeCalibration.cpp  correspondences_45_1.txt~  test_sysRef.cpp
Calibration/ControlPlanes/: correspondences_0_1.txt  correspondences_0_2.txt  correspondences_0_3.txt  correspondences_0_4.txt  correspondences_0_5.txt  correspondences_0_6.txt  correspondences_0_7.txt  correspondences_180.txt  correspondences_1_2.txt  correspondences_1_3.txt  correspondences_1_4.txt  correspondences_1_5.txt  correspondences_1_6.txt  correspondences_1_7.txt  correspondences_2_3.txt  correspondences_2_4.txt  correspondences_2_5.txt  correspondences_2_6.txt  correspondences_2_7.txt  correspondences_3_4.txt  correspondences_3_5.txt  correspondences_3_6.txt  correspondences_3_7.txt  correspondences_45.txt  correspondences_45_1.txt  correspondences_45_1_b.txt  correspondences_4_5.txt  correspondences_4_6.txt  correspondences_4_7.txt  correspondences_5_6.txt  correspondences_5_7.txt  correspondences_6_7.txt
Calibration/ControlPlanes/Adjacent_Int/: correspondences_0_1.txt  correspondences_0_7.txt  correspondences_1_2.txt  correspondences_3_4.txt  correspondences_4_5.txt  correspondences_6_7.txt
Calibration/ControlPlanes/Adjacent_NoIntrinsics/: correspondences_0_1.txt  correspondences_4_5.txt
Calibration/ControlPlanes/All_Int/: correspondences_0_2.txt  correspondences_0_3.txt  correspondences_0_4.txt  correspondences_0_5.txt  correspondences_0_6.txt  correspondences_1_3.txt  correspondences_1_4.txt  correspondences_1_5.txt  correspondences_1_6.txt  correspondences_1_7.txt  correspondences_2_3.txt  correspondences_2_4.txt  correspondences_2_5.txt  correspondences_2_6.txt  correspondences_2_7.txt  correspondences_3_5.txt  correspondences_3_6.txt  correspondences_3_7.txt  correspondences_4_6.txt  correspondences_4_7.txt  correspondences_5_6.txt  correspondences_5_7.txt
Calibration/ControlPlanes/All_NoIntrinsic/: correspondences_0_2.txt  correspondences_0_3.txt  correspondences_0_4.txt  correspondences_0_5.txt  correspondences_0_6.txt  correspondences_0_7.txt  correspondences_1_2.txt  correspondences_1_3.txt  correspondences_1_4.txt  correspondences_1_5.txt  correspondences_1_6.txt  correspondences_1_7.txt  correspondences_2_3.txt  correspondences_2_4.txt  correspondences_2_5.txt  correspondences_2_6.txt  correspondences_2_7.txt  correspondences_3_4.txt  correspondences_3_5.txt  correspondences_3_6.txt  correspondences_3_7.txt  correspondences_4_6.txt  correspondences_4_7.txt  correspondences_5_6.txt  correspondences_5_7.txt  correspondences_6_7.txt
Calibration/Extrinsics/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_06.txt  Rt_07.txt
Calibration/Extrinsics/Adjacent_Int/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/Extrinsics/Adjacent_NoIntrinsics/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/Extrinsics/All_Int/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/Extrinsics/All_NoIntrinsic/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/Extrinsics/ConstructionSpecs/: Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/Extrinsics/ContiguousCalibInt/: Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/Intrinsics/: distortion_model1  distortion_model2  distortion_model3  distortion_model4  distortion_model5  distortion_model6  distortion_model7  distortion_model8
Calibration/New/: Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/New2/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt
Calibration/OnlineCalibration/: correspMat_1.txt  correspMat_3.txt  correspMat_4.txt  correspMat_5.txt  correspMat_6.txt  correspMat_7.txt
Calibration/OnlineCalibration/not_weighted/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt  correspMat_0.txt
Calibration/OnlineCalibration/run_old/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  Rt_05.txt  Rt_06.txt  Rt_07.txt  Rt_08.txt  correspMat_0.txt  correspMat_1.txt  correspMat_2.txt  correspMat_3.txt  correspMat_4.txt  correspMat_5.txt  correspMat_6.txt  correspMat_7.txt
Calibration/OnlineCalibration/test/: Rt_04.txt  Rt_05.txt  Rt_08.txt  correspMat_2.txt
Calibration/test/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt  ref_Rt_01.txt  test.rar
Calibration/test/Rotation/: Rt_04.txt
Calibration/test/translation/: Rt_01.txt  Rt_02.txt  Rt_03.txt  Rt_04.txt
Grabber/: CMakeLists.txt  CMakeLists.txt~  RGBD360_Grabber.cpp
GraphOptimization/: GraphOptimizer.h  (+4 more)
Labelization/: CMakeLists.txt  CMakeLists.txt~  LabelizeFrame360.cpp  LabelizeSequence.cpp
Registration/: CMakeLists.txt  CMakeLists.txt~  MethodsRegisterRGBD360.cpp  OdometryKeyFrame360.cpp  OdometryRGBD360.cpp  OdometryRGBD360_stereo.cpp  OdometryRGBD_rawlog.cpp  OdometryRGBD_rawlog2sphere.cpp  OnlineOdometryRGBD360.cpp  Register360_indoor_outdoor.cpp  RegisterGraphSphere.cpp  RegisterPairRGBD360.cpp  RegisterPairRGBD360_PbMap.cpp  RegisterPairRGBD360_stereo.cpp  RegisterSequenceSphere_labelFast.cpp  test.cpp  test_opencv.cpp
SLAM/: CMakeLists.txt  CMakeLists.txt~  KFsphere_SLAM.cpp  SphereGraphSLAM.cpp
Visualization/: CMakeLists.txt  CMakeLists.txt~  Frame360_compare.cpp  LoadFrame360.cpp  LoadFrame360_stereo.cpp  LoadRawlog.cpp  LoadRawlog180.cpp  LoadSequence.cpp  LoadSphere.cpp
(+314 files in other folders)
